# blas-playground

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
benchmarks/: CMakeLists.txt  blas_level3_benchmarks.cpp
benchmarks/mkl/: blas_level3_benchmarks.cpp
data/: gemm-benchmark.json  gemm-benchmark.txt
src/: CMakeLists.txt  main.cpp
src/gemm/: gemm.cpp  gemm.h
tests/: CMakeLists.txt  blas_level3_tests.cpp
